@@ -27,10 +27,10 @@ def multi_call_test():
         axis_id = cmor.axis(**axis)
         axis_ids.append(axis_id)
     varid = cmor.variable('ts', 'K', axis_ids)
-    cmor.write(varid, [273], time_vals = [15], time_bnds = [ [0,30] ])
+    cmor.write(varid, [275], time_vals = [15], time_bnds = [ [0,30] ])
     print 'First write worked as expected'
     try:
-        cmor.write(varid, [273], time_vals = [15], time_bnds = [ [0], [30] ])
+        cmor.write(varid, [275], time_vals = [15], time_bnds = [ [0], [30] ])
         raise Exception,"We shouldn't be getting in here"
     except:
         print 'Second write that should have failed did fail, good!'
