@@ -3,7 +3,7 @@ import cmor,numpy
 
 
 
-vars ={'hfls' : ['W.m-2',25.,30.],'tas':['K',25,273.15],'clt':['%',100.,0.],'ta':['K',25,273.15]}
+vars ={'hfls' : ['W.m-2',25.,40.],'tas':['K',25,268.15],'clt':['%',100.,0.],'ta':['K',25,273.15]}
 
 
 nlat = 90
