@@ -5,12 +5,12 @@
 #define CMOR_MAX_ELEMENTS 500
 #define CMOR_MAX_AXES CMOR_MAX_ELEMENTS*3
 #define CMOR_MAX_VARIABLES CMOR_MAX_ELEMENTS
-#define CMOR_MAX_GRIDS 10
+#define CMOR_MAX_GRIDS 100
 #define CMOR_MAX_DIMENSIONS 7
 #define CMOR_MAX_ATTRIBUTES 100
 #define CMOR_MAX_ERRORS 10
 #define CMOR_MAX_TABLES 10
-#define CMOR_MAX_GRID_ATTRIBUTES 15
+#define CMOR_MAX_GRID_ATTRIBUTES 25
 
 #define CMOR_QUIET 0
 
